WIP: Packaging with smaller JRE works, described in buildinfo.md